Solid Waste page is feature complete.

--- a/_pages/dept/solid_waste/home.html
+++ b/_pages/dept/solid_waste/home.html
@@ -2,9 +2,11 @@
 layout: page
 title: Solid Waste Department
 permalink: /solid_waste/
+tree: true
 ---
 <div class="row">
-	<div class="container col-md-4" id="notices">
+	<div class="col-md-8">
+	<div class="container col-md-6" id="notices">
 		<div class="panel panel-default">
 			<div class="panel-heading">
 				<h3 class="text-center">Notices</h3>
@@ -20,7 +22,7 @@ permalink: /solid_waste/
 				</div>
 			</div>
 		</div>
-	<div class="container col-md-4" id="news">
+	<div class="container col-md-6" id="news">
 		<div class="panel panel-default">
 			<div class="panel-heading">
 				<h3 class="text-center">News</h3>
@@ -40,25 +42,11 @@ permalink: /solid_waste/
 	</div>
 
 
-<!-- additional information menu -->
-	<div class="col-md-4">
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h3 class="text-center">Additional Information</h3>
-				<hr>
-					<button type="button" href="billing.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Billing Procedures</button>
-			</div>
-		</div>
+
+	<div class="col-md-12">
+	<div class="alert alert-danger" role="alert">This site concerns RURAL county residences only. For assistance with a residence inside a city limit please call City Hall.
 	</div>
-</div>
 
-
-<div id="main" class="col-md-8 hidden-xs">
-		<div class="alert alert-danger" role="alert">This site concerns RURAL county residences only. For assistance with a residence inside a city limit please call City Hall.
-		</div>
-</div>
-
-<div class="col-md-8 hidden-xs">
 	<div class="panel panel-default" >
 	<div class="panel-heading">
 		<h3 class="panel-title">The Latah Sanitation, Inc. Transfer Station disposal site</h3>
@@ -68,37 +56,94 @@ permalink: /solid_waste/
 		<br>Located at 3299 Highway 8 (five miles east of Moscow) 208-882-5724
 	</div>
 	</div>
-</div>
 
-<!-- Department Description -->
-<div class="col-md-8 hidden-xs">
-	<div class="panel panel-default">
-		<p class="panel-body">
-			Under the supervision of the County Commissioners the Solid Waste office sets fees and negotiates contracts with government and private entities. Billing procedures and collection of fees are managed by the Solid Waste Department. We strive to resolve problems incurred by ratepayers with payments or with any of the services included.<br><br>
-			Solid waste fees are <b>Mandatory</b>. The Latah County Solid Waste Ordinance states maintenance and operation of the rural solid waste collection system shall be funded by assessment and collection of a fee imposed upon all premises in Latah County, except those located within the corporate limits of any city.<br><br>
-			Fees provide weekly driveway service, access to Moscow Recycling Center, Bulky Waste Sites, Household Hazardous Waste Facility, Compost Program, Shred Day, Tire Amnesty Day and some services at the Solid Waste Processing Facility.<br><br>
-			The Latah County Solid Waste Ordinance #229, Section 18, "Unlawful Disposal of Solid Waste" states: "It shall be unlawful for any person in Latah County to bury, dump, collect, remove, throw, discard, deposit or in any other manner dispose of solid waste other than into the Latah County Solid Waste disposal system, without first obtaining a permit therefore under the specific provisions for special permits." (see Special Permits, Section 27, Ordinance #229). Solid Waste exemptions are available in certain situations. Please see billing procedures section for more information.<br><br>
-			The Latah County municipal landfill was closed in 1993, due to the Federal Subtitle D regulations adopted in 1991. This regulation stated that in order for Latah County to continuing to use the existing landfill site we would have to accept past, present and future liability. Therefore, the City of Moscow and the Solid Waste Advisory Committee recommended transporting municipal solid waste (MSW) out of Latah County. All MSW is transported to Arlington, Oregon.<br><br>
-			The local landfill, located at the Solid Waste Processing Facility on Highway 8 is for non-municipal (inert demolition) solid waste.<br><br>
-		</p>
+
+	<!-- Department Description -->
+		<div class="panel panel-default">
+			<p class="panel-body">
+				Under the supervision of the County Commissioners the Solid Waste office sets fees and negotiates contracts with government and private entities. Billing procedures and collection of fees are managed by the Solid Waste Department. We strive to resolve problems incurred by ratepayers with payments or with any of the services included.<br><br>
+				Solid waste fees are <b>Mandatory</b>. The Latah County Solid Waste Ordinance states maintenance and operation of the rural solid waste collection system shall be funded by assessment and collection of a fee imposed upon all premises in Latah County, except those located within the corporate limits of any city.<br><br>
+				Fees provide weekly driveway service, access to Moscow Recycling Center, Bulky Waste Sites, Household Hazardous Waste Facility, Compost Program, Shred Day, Tire Amnesty Day and some services at the Solid Waste Processing Facility.<br><br>
+				The Latah County Solid Waste Ordinance #229, Section 18, "Unlawful Disposal of Solid Waste" states: "It shall be unlawful for any person in Latah County to bury, dump, collect, remove, throw, discard, deposit or in any other manner dispose of solid waste other than into the Latah County Solid Waste disposal system, without first obtaining a permit therefore under the specific provisions for special permits." (see Special Permits, Section 27, Ordinance #229). Solid Waste exemptions are available in certain situations. Please see billing procedures section for more information.<br><br>
+				The Latah County municipal landfill was closed in 1993, due to the Federal Subtitle D regulations adopted in 1991. This regulation stated that in order for Latah County to continuing to use the existing landfill site we would have to accept past, present and future liability. Therefore, the City of Moscow and the Solid Waste Advisory Committee recommended transporting municipal solid waste (MSW) out of Latah County. All MSW is transported to Arlington, Oregon.<br><br>
+				The local landfill, located at the Solid Waste Processing Facility on Highway 8 is for non-municipal (inert demolition) solid waste.<br><br>
+			</p>
+		</div>
+
+	<!-- End Description -->
+
+
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h3 class="panel-title">Special Events</h3>
+			</div>
+
+			<div class="panel-body">
+					<b>Clean-up Months</b><br><br>
+					<b>April and October</b> are deemed clean-up months at the Bulky Waste Sites.<br>
+					Household garbage including plastic and rubber items are accepted during these tow months only.<br><br>
+					No E-Waste or Hazardous Waste
+			</div>
+		</div>
 	</div>
 </div>
-<!-- End Description -->
 
-<div class="col-md-8 hidden-xs">
+<!-- Services -->
+<div class="col-md-4">
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			<h3 class="panel-title">Special Events</h3>
+			<h3 class="text-center">Our Services</h3>
 		</div>
-
-		<div class="panel-body">
-				<b>Clean-up Months</b><br><br>
-				<b>April and October</b> are deemed clean-up months at the Bulky Waste Sites.<br>
-				Household garbage including plastic and rubber items are accepted during these tow months only.<br><br>
-				No E-Waste or Hazardous Waste
+		<div class="list-group">
+			<li class="list-group-item">Manage Solid Waste Fees</li>
+			<li class="list-group-item">Negotiates Contracts</li>
+			<li class="list-group-item">Manages Billing and Collection</li>
 		</div>
 	</div>
+
+
+<!-- additional information menu -->
+	<!-- <div class="col-md-4"> -->
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h3 class="text-center">Additional Information</h3>
+				<hr>
+					<button type="button" href="billing.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Billing Procedures</button>
+					<button type="button" href="onlinepayments.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Online Payments</button>
+					<button type="button" href="bulkywaste.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Bulky Waste</button>
+					<button type="button" href="commercialaccounts.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Commercial Billing</button>
+					<button type="button" href="drivewayservice.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Driveway Service</button>
+					<button type="button" href="empiredisposal.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Empire Disposal Accounts</button>
+					<button type="button" href="hazardouswaste.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Household Hazardous Waste</button>
+					<button type="button" href="holidaycollection.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Holiday Collection Schedule</button>
+					<button type="button" href="moscowrecycling.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Moscow Recycling Center Services</button>
+					<button type="button" href="ruralrecycling.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Rural Recycling Program</button>
+					<button type="button" href="advisorycommittee.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Solid Waste Advisory Committee (SWAC)</button>
+					<button type="button" href="processingfacility.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Solid Waste Processing Facility (SWPF)</button>
+			</div>
+		</div>
+
+		<!-- forms -->
+
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h4 class=" text-center">Solid Waste Forms and Files</h4>
+				</div>
+				<div class="list-group">
+					<div id="swDir" class="list-group-item"></div>
+				</div>
+				<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
+					<div class="list-group pre-scrollable" id="forms">
+						<div id="forms"></div>
+						<noscript>To view forms please enable JavaScript or update your browser</noscript>
+					</div>
+				</div>
+			</div>
+
+	</div>
 </div>
+
+
 
 <!-- modal object -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog">
@@ -124,10 +169,6 @@ $(document).ready(function(){
 		var link = $(e.relatedTarget);
 		$(this).find(".modal-title").text(e.relatedTarget.innerText);
 		$(this).find(".modal-body").load(link.attr("href"));
-		// $.get("billing.html", function(data){
-		// 	 $("#myModalDiv").html(data).fadeIn();
-
-
 	});
 });
 </script>
