Added exemptions to SW page

--- a/_pages/dept/solid_waste/empiredisposal.html
+++ b/_pages/dept/solid_waste/empiredisposal.html
@@ -30,10 +30,10 @@ permalink: /solid_waste/empiredisposal
         Payments are due by the 15th of the month.  Delinquent accounts are subject to late fees.  <strong>Monthly statements are not mailed for residential accounts.</strong>  Payment books and automatic bank deduction forms are available upon request.  Credit and debit card payments are accepted with a 3% service fee.
       </p>
       <p>
-        Solid waste exemptions may be available if a home is vacant, non-livable, or used for storage. Applications may be obtained from the Latah County Solid Waste Office or downloaded from the link below. <strong>An exemption must be applied for and approved in order to stop billing.</strong>
+        Solid waste exemptions may be available if a home is vacant, non-livable, or used for storage. Applications may be obtained from the Latah County Solid Waste Office or downloaded from the Forms and Files section. <strong>An exemption must be applied for and approved in order to stop billing.</strong>
       </p>
       <ul>
-        <li><a href ="exempt_form.pdf">Exempt Form</a></li>
+        <li> To download Exempt Form, please visit the Forms and Files section.
       </ul>
       <p>
         Landlords are responsible for notifying their occupants of all services available.  If a tenant does not pay the solid waste fee the owner will be held responsible.  <strong>The bill and any fees may be certified to the owner&acute;s property tax bill for collection.</strong>
