--- a/_pages/dept/solid_waste/home.html
+++ b/_pages/dept/solid_waste/home.html
@@ -114,6 +114,7 @@ tree: true
 					<button type="button" href="commercialaccounts.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Commercial Billing</button>
 					<button type="button" href="drivewayservice.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Driveway Service</button>
 					<button type="button" href="empiredisposal.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Empire Disposal Accounts</button>
+					<button type="button" href="exemptioninfo.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Exemption Information</button>
 					<button type="button" href="hazardouswaste.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Household Hazardous Waste</button>
 					<button type="button" href="holidaycollection.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Holiday Collection Schedule</button>
 					<button type="button" href="moscowrecycling.html" data-remote="false" class="btn btn-primary btn-sm btn-block billing" data-toggle="modal" data-target="#myModal">Moscow Recycling Center Services</button>
