Updates for weed control

--- a/_pages/dept/weed_control/home.html
+++ b/_pages/dept/weed_control/home.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Weed Control
+title: Noxious Weed Control
 permalink: /weed_control/
 ---
 
@@ -127,11 +127,9 @@ permalink: /weed_control/
         <h4 class="text-center">Our Services</h4>
       </div>
       <div class="list-group">
-        <li class="list-group-item">Need Services</li>
-        <li class="list-group-item">Need Services</li>
-        <li class="list-group-item">Need Services</li>
-        <li class="list-group-item">Need Services</li>
-        <li class="list-group-item">Need Services</li>
+        <li class="list-group-item">Inspecting Lands for Compliance</li>
+        <li class="list-group-item">Checking for New Weed Invasions</li>
+        <li class="list-group-item">Advising on Weed Control</li>
       </div>
     </div>
     <!-- End Services -->
