More updates for weed control

--- a/_pages/dept/weed_control/home.html
+++ b/_pages/dept/weed_control/home.html
@@ -56,7 +56,7 @@ permalink: /weed_control/
         <div class="panel-heading" role="tab" id="headingThree">
           <h4 class="panel-title">
             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Weed Photos
+              Noxious Weed Photos
             </a>
           </h4>
         </div>
@@ -129,7 +129,7 @@ permalink: /weed_control/
       <div class="list-group">
         <li class="list-group-item">Inspecting Lands for Compliance</li>
         <li class="list-group-item">Checking for New Weed Invasions</li>
-        <li class="list-group-item">Advising on Weed Control</li>
+        <li class="list-group-item">Advising on Noxious Weed Control</li>
       </div>
     </div>
     <!-- End Services -->
