SW format changes and spelling corrections.

--- a/_pages/dept/solid_waste/billing.html
+++ b/_pages/dept/solid_waste/billing.html
@@ -4,13 +4,12 @@ permalink: /solid_waste/billing
 
     <div class="panel panel-default" >
       <div class="panel-heading">
-        <h3 class="panel-title">2017 Residential Solid Waste Fees<br>
-          (Rural Latah County serviced by Latah Sanitation)
-        </h3>
-        <h5 style="color:#FF0000">Please keep accounts current, $10.00 late fees applied on the 15th of March, June, September & December.</h5>
+        <div class="panel-title">2017 Residential Solid Waste Fees</div>
       </div>
       <div class="panel-body">
-        <h3 style="text-align: center;">2017 Residential Rates</h3>
+        <!-- <h3 style="text-align: center;">2017 Residential Rates</h3> -->
+        <p>(Rural Latah County serviced by Latah Sanitation)</p>
+      <h5 style="color:#FF0000">Please keep accounts current, $10.00 late fees applied on the 15th of March, June, September & December.</h5>
 
         <table style="margin-left: auto; margin-right: auto;" width="100%" class="datatable2">
               <tbody>
