--- a/_pages/dept/solid_waste/commercialaccounts.html
+++ b/_pages/dept/solid_waste/commercialaccounts.html
@@ -3,75 +3,74 @@ permalink: /solid_waste/commercialaccounts
 ---
 <div class="panel panel-default" >
   <div class="panel-body">
-      <p>
-                Dumpsters are available for commercial use in Latah County.  The Solid Waste Department activates and closes accounts, modifies the size of dumpsters, and handles the billing for commercial accounts.
-              </p>
-              <p>
-                Latah Sanitation, Inc. provides all services for the dumpsters.  Waste removal is on a weekly basis.  If the container needs to be cleaned or repaired please call Latah Sanitation at 208-882-5724.
-              </p>
-              <p>
-                Dumpsters must be used for solid waste <strong>only</strong> and <strong>must not</strong> be used for demolition debris.  Latah Sanitation may refuse to service containers filled with demolition debris.  To obtain a dumpster for demolition debris <strong>only</strong> please contact Latah Sanitation.
-              </p>
-              <p>
-                All commercial accounts are responsible for open access to the container to provide Latah Sanitation easy removal.   Latah County Solid Waste Department will not pay for overflow at your dumpster site.  If there is overflow you will be billed directly from Latah Sanitation.
-              </p>
-              <h2 class="sectionheader">2017 Rates</h2>
-              <table style="margin-left: auto; margin-right: auto;" class="datatable2" cellspacing="0" cellpadding="3" width="100%">
-                <thead>
-                  <tr>
-                    <th id="dumpstersize" width="130">Dumpster Size</th>
-                    <th id="quarterlyfee" width="130">Quarterly Fee</th>
-                    <th id="annualfee" width="130">Annual Fee</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td headers="dumpstersize">95-Gallon Cart</td>
-                    <td headers="quarterlyfee">$90.00</td>
-                    <td headers="annualfee">$360.00</td>
-                  </tr>
-                  <tr>
-                    <td headers="dumpstersize">1-Yard</td>
-                    <td headers="quarterlyfee">$184.50</td>
-                    <td headers="annualfee">$738.00</td>
-                  </tr>
-                  <tr>
-                    <td headers="dumpstersize">2-Yard</td>
-                    <td headers="quarterlyfee">$336.00</td>
-                    <td headers="annualfee">$1,344.00</td>
-                  </tr>
-                  <tr>
-                    <td headers="dumpstersize">3-Yard</td>
-                    <td headers="quarterlyfee">$489.00</td>
-                    <td headers="annualfee">$1,956.00</td>
-                  </tr>
-                  <tr>
-                    <td headers="dumpstersize">4-Yard</td>
-                    <td headers="quarterlyfee">$657.00</td>
-                    <td headers="annualfee">$2,628.00</td>
-                  </tr>
-                  <tr>
-                    <td headers="dumpstersize">6-Yard</td>
-                    <td headers="quarterlyfee">$930.00</td>
-                    <td headers="annualfee">$3,720.00</td>
-                  </tr>
-                </tbody>
-              </table>
-              <br>
-              <p>
-                Accounts are billed quarterly and must be kept current to avoid $10.00 late fees, which are applied on the 15<sup>th</sup> of March, June, September, &amp; December. Automatic bank deduction for monthly payments are free, please call to set up. Credit/debit cards have a 2.5% service fee with a minimum of $1.50. Account number and/or physical address must be included with all payments.
-              </p>
-              <p>
-                Landlords leasing property to a tenant who has a commercial container must notify the Solid Waste Department immediately at the termination of the tenant&acute;s lease. If tenant does not pay the solid waste fee the owner will be held responsible. <strong>The bill and any fees may be certified to the owner&acute;s property tax bill for collection.</strong>
-              </p>
-              <p>
-                Commercial accounts may dispose of items at the <strong>Solid Waste Processing Facility.</strong> This service is <strong>non-inclusive</strong> with commercial accounts. Payment is due at time of disposal by cash or checks only. <strong>Commercial accounts are NOT allowed to use the Bulky Waste Sites.</strong>
-              </p>
-              <p>
-                <strong>For more detailed information please see the Moscow Recycling webpage at</strong><a href="http://www.moscowrecycling.com/"> www.moscowrecycling.com</a>
-              </p>
-            </table>
-    </p>
-
+        <p>Dumpsters are available for commercial use in Latah County.  The Solid Waste Department activates and closes accounts, modifies the size of dumpsters, and handles the billing for commercial accounts.</p>
+        <p>Latah Sanitation, Inc. provides all services for the dumpsters.  Waste removal is on a weekly basis.  If the container needs to be cleaned or repaired please call Latah Sanitation at 208-882-5724.</p>
+        <p>Dumpsters must be used for solid waste <strong>only</strong> and <strong>must not</strong> be used for demolition debris.  Latah Sanitation may refuse to service containers filled with demolition debris.  To obtain a dumpster for demolition debris <strong>only</strong> please contact Latah Sanitation.</p>
+        <p>All commercial accounts are responsible for open access to the container to provide Latah Sanitation easy removal.   Latah County Solid Waste Department will not pay for overflow at your dumpster site.  If there is overflow you will be billed directly from Latah Sanitation.</p>
   </div>
 </div>
+      <div class="panel panel-default" >
+        <div class="panel-heading">
+          <div class="panel-title">2017 Rates</div>
+        </div>
+        <div class="panel-body">
+                <!-- <h2 class="sectionheader">2017 Rates</h2> -->
+                <table style="margin-left: auto; margin-right: auto;" class="datatable2" cellspacing="0" cellpadding="3" width="100%">
+                  <thead>
+                    <tr>
+                      <th id="dumpstersize" width="130">Dumpster Size</th>
+                      <th id="quarterlyfee" width="130">Quarterly Fee</th>
+                      <th id="annualfee" width="130">Annual Fee</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td headers="dumpstersize">95-Gallon Cart</td>
+                      <td headers="quarterlyfee">$90.00</td>
+                      <td headers="annualfee">$360.00</td>
+                    </tr>
+                    <tr>
+                      <td headers="dumpstersize">1-Yard</td>
+                      <td headers="quarterlyfee">$184.50</td>
+                      <td headers="annualfee">$738.00</td>
+                    </tr>
+                    <tr>
+                      <td headers="dumpstersize">2-Yard</td>
+                      <td headers="quarterlyfee">$336.00</td>
+                      <td headers="annualfee">$1,344.00</td>
+                    </tr>
+                    <tr>
+                      <td headers="dumpstersize">3-Yard</td>
+                      <td headers="quarterlyfee">$489.00</td>
+                      <td headers="annualfee">$1,956.00</td>
+                    </tr>
+                    <tr>
+                      <td headers="dumpstersize">4-Yard</td>
+                      <td headers="quarterlyfee">$657.00</td>
+                      <td headers="annualfee">$2,628.00</td>
+                    </tr>
+                    <tr>
+                      <td headers="dumpstersize">6-Yard</td>
+                      <td headers="quarterlyfee">$930.00</td>
+                      <td headers="annualfee">$3,720.00</td>
+                    </tr>
+                  </tbody>
+                </table>
+                <br>
+                <p>
+                  Accounts are billed quarterly and must be kept current to avoid $10.00 late fees, which are applied on the 15<sup>th</sup> of March, June, September, &amp; December. Automatic bank deduction for monthly payments are free, please call to set up. Credit/debit cards have a 2.5% service fee with a minimum of $1.50. Account number and/or physical address must be included with all payments.
+                </p>
+                <p>
+                  Landlords leasing property to a tenant who has a commercial container must notify the Solid Waste Department immediately at the termination of the tenant&acute;s lease. If tenant does not pay the solid waste fee the owner will be held responsible. <strong>The bill and any fees may be certified to the owner&acute;s property tax bill for collection.</strong>
+                </p>
+                <p>
+                  Commercial accounts may dispose of items at the <strong>Solid Waste Processing Facility.</strong> This service is <strong>non-inclusive</strong> with commercial accounts. Payment is due at time of disposal by cash or checks only. <strong>Commercial accounts are NOT allowed to use the Bulky Waste Sites.</strong>
+                </p>
+                <p>
+                  <strong>For more detailed information please see the Moscow Recycling webpage at</strong><a href="http://www.moscowrecycling.com/"> www.moscowrecycling.com</a>
+                </p>
+              </table>
+      </p>
+
+    </div>
+  </div>
