--- a/_pages/dept/solid_waste/bulkywaste.html
+++ b/_pages/dept/solid_waste/bulkywaste.html
@@ -8,22 +8,22 @@ permalink: /solid_waste/bulkywaste
     </p>
     <div class="panel panel-default" >
     <div class="panel-heading">
-      <h2 class="panel-title"><b>Bulky Wast Collection Sites<br>
-        Open 8:00 a.m. to 4:00 p.m. On specifed saturdays only</b>
-      </h2>
+      <h2 class="panel-title">Bulky Wast Collection Sites</h2>
     </div>
     <div class="panel-body">
-      <h4><b>Bovill - April 29, 2017 &amp; July 29, 2017 Only</b></h4>
+      <p>Open 8:00 a.m. to 4:00 p.m. On specifed saturdays only</p>
+
+      <b>Bovill - April 29, 2017 &amp; July 29, 2017 Only</b>
             <p>Located on Railroad Avenue across from Bovill City Hall and the tennis courts.</p>
-      <h4><b>Deary - 2nd and 4th Saturdays of the month</b></h4>
+      <b>Deary - 2nd and 4th Saturdays of the month</b>
             <p>Located on Line Street behind the elevators.</p>
-      <h4><b>Genesee - 2nd and 4th Saturdays</b></h4>
+      <b>Genesee - 2nd and 4th Saturdays</b>
             <p>Located on Morscheck Road across from the sewer lagoons.</p>
-      <h4><b>Juliaetta - 1st and 3rd Saturdays</b></h4>
+      <b>Juliaetta - 1st and 3rd Saturdays</b>
             <p>Located south of Juliaetta on HWY 3 past the ballpark and across from Browning Cut Stock.</p>
-      <h4><b>Potlatch - 1st and 3rd Saturdays</b></h4>
+      <b>Potlatch - 1st and 3rd Saturdays</b>
             <p>Located at Mr. Johnson's old pit. Turn south onto Pine Street (which will turn into Rock Creek Road) and continue 1 mile. It is on the left prior to the railroad tracks.</p>
-      <h4><b>Troy &amp; Moscow - 2nd &amp; 4th Saturdays</b></h4>
+      <b>Troy &amp; Moscow - 2nd &amp; 4th Saturdays</b>
             <p>*Excludes those within city limits of Moscow* <br />3299 Highway 8 East, Moscow.</p>
     </div>
   </div>
