--- a/_pages/home.html
+++ b/_pages/home.html
@@ -42,6 +42,7 @@ permalink: /
       </div>
       <div class="list-group">
         {% for news in site.data.news %}
+         {% if news.home %}
           <a href="{{ news.url }}" target="{{ news.target }}" rel="noopener" class="list-group-item text-center">
             {% if news.title == null  %}
               <h4>No news at this time.</h4>
@@ -49,6 +50,7 @@ permalink: /
               {{ news.title }}
             {% endif %}
           </a>
+          {% endif %}
         {% endfor %}
       </div>
     </div>
